test/compile_fail_inputs/entry_value_param_source.zig
/// Entry fixture proving public lowering rejects source-lowered entry value parameters.
pub fn runBody(value: i32) void {
    _ = value;
}
